--- a/src/css/pretty.less
+++ b/src/css/pretty.less
@@ -1,7 +1,17 @@
-@base : #f938ab;
+@red   		: #CC594A;
+@yellow 	: #B8CC24;
+@blue 		: #8BC5FF;
+@purple 	: #6F3596;
 
-/* BASE 
-============================================================================= */
-html, body 					{ min-height:2500px; }
-html 						{ overflow-y:scroll; }
-body 						{ background:@base; position:relative; }    
+body 		{ 
+	background:@red;
+	color:@yellow;
+}
+
+button 		{
+	background:@blue;
+}
+
+div 		{
+	background:@purple;
+}
